--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "dependencies": {
-        "axios": "^0.27.2"
-    },
+    "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node example.js"
     },
     "repository": {
         "type": "git",
