--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "node example.js"
+        "test": "cd svg-packages-stats-demo && npm run test"
     },
     "repository": {
         "type": "git",
