--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "cd svg-packages-stats-demo && npm run test"
+        "test": "cd svg-packages-stats-demo && npm run test",
+        "deploy": "npm add svg-packages-stats && npm install"
     },
     "repository": {
         "type": "git",
